# main.go
@@ -2,7 +2,6 @@ package main
 
 import (
 	"context"
-	"log"
 	"net/http"
 	"os"
 	"os/signal"
@@ -12,14 +11,20 @@ import (
 	"github.com/go-openapi/runtime/middleware"
 	goHandlers "github.com/gorilla/handlers"
 	"github.com/gorilla/mux"
+	"github.com/grkmk/glm-api/data"
 	"github.com/grkmk/glm-api/handlers"
 	protos "github.com/grkmk/glm-currency/protos/currency"
+	"github.com/hashicorp/go-hclog"
 	"google.golang.org/grpc"
 )
 
 func main() {
 	// create logger
-	logger := log.New(os.Stdout, "[product-api]: ", log.LstdFlags)
+	logger := hclog.New(&hclog.LoggerOptions{
+		Name:  "[product-api]",
+		Color: hclog.AutoColor,
+		Level: hclog.DefaultLevel,
+	})
 
 	conn, err := grpc.Dial("localhost:9092", grpc.WithInsecure()) // insecure option should not be used in prod
 	if err != nil {
@@ -30,8 +35,11 @@ func main() {
 	// create client
 	currencyClient := protos.NewCurrencyClient(conn)
 
+	// create database instance
+	db := data.NewProductsDB(currencyClient, logger)
+
 	// create handlers
-	productsHandler := handlers.NewProducts(logger, currencyClient)
+	productsHandler := handlers.NewProducts(logger, db)
 
 	// create serve mux & register handlers
 
@@ -41,7 +49,10 @@ func main() {
 	serveMux := mux.NewRouter()
 
 	getRouter := serveMux.Methods(http.MethodGet).Subrouter()
+	getRouter.HandleFunc("/products", productsHandler.GetProducts).Queries("currency", "{[A-Z]{3}}")
 	getRouter.HandleFunc("/products", productsHandler.GetProducts)
+
+	getRouter.HandleFunc("/products/{id:[0-9]+}", productsHandler.GetProduct).Queries("currency", "{[A-Z]{3}}")
 	getRouter.HandleFunc("/products/{id:[0-9]+}", productsHandler.GetProduct)
 
 	postRouter := serveMux.Methods(http.MethodPost).Subrouter()
@@ -70,15 +81,16 @@ func main() {
 		ReadTimeout:  1 * time.Second,       // max time to read request from client
 		WriteTimeout: 1 * time.Second,       // max time to write response to client
 		IdleTimeout:  120 * time.Second,     // max time for connections using TCP Keep-Alive
+		ErrorLog:     logger.StandardLogger(&hclog.StandardLoggerOptions{}),
 	}
 
 	// start server
 	go func() {
-		logger.Println("Starting server on port 9090")
+		logger.Info("Starting server on port 9090")
 
 		err := httpServer.ListenAndServe()
 		if err != nil {
-			logger.Printf("Error starting server: %s\n", err)
+			logger.Error("Error starting server: %s\n", err)
 			os.Exit(1)
 		}
 	}()
@@ -89,7 +101,7 @@ func main() {
 	signal.Notify(signalChannel, syscall.SIGTERM)
 
 	sig := <-signalChannel
-	logger.Println("Received terminate, gracefully shutting down", sig)
+	logger.Info("Received terminate, gracefully shutting down", sig)
 
 	timeoutContext, cancelTimeout := context.WithTimeout(context.Background(), 30*time.Second)
 	httpServer.Shutdown(timeoutContext)
